manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitops
  labels:
    app: gitops
