manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-deployment
  namespace: gitops
  labels:
    app: gitops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitops
  template:
    metadata:
      labels:
        app: gitops
    spec:
      containers:
        - name: gitops
          image: nginx:latest
          ports:
            - containerPort: 80
