manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-service
  namespace: gitops
spec:
  selector:
    app: gitops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
